# lambda1-grandprix

./: .envrc  .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  README.md  flake.nix
code/: README.md
corpus/: README.md
translator/: Cargo.toml
translator/corpus/: json.lam
translator/demo/clojure/: demo.clj  lam1.clj
translator/demo/cpp/: demo.cpp
translator/demo/emacs/: demo.el
translator/demo/go/: demo.go
translator/demo/haskell/: demo.hs
translator/demo/java/: demo.java
translator/demo/kotlin/: demo.kt
translator/demo/lazyk/: demo.lazy
translator/demo/pascal/: demo.pas
translator/demo/perl/: demo.pl  lam1.pl
translator/demo/php/: demo.php
translator/demo/python/: demo.py  lam1.py
translator/demo/racket/: demo.rkt  lam1.rkt
translator/demo/ruby/: demo.rb  lam1.rb
translator/demo/rust/: demo.rs
translator/demo/scala/: demo.scala
translator/demo/sml/: demo.sml
translator/demo/swift/: demo.swift
translator/preludes/: clojure.clj  clojure_lam.clj  cpp.cpp  emacs.el  emacs_lam.el  go.go  haskell.hs  java.java  kotlin.kt  newlisp.lsp  pascal.pas  perl.pl  php.php  python.py  racket.rkt  rust.rs  scala.scala  scala_infix.scala  sml.sml  swift.swift
translator/scripts/: codesize.sh  gen-all.sh
translator/src/: ast.rs  lexer.rs  main.rs  parser.rs
translator/src/codegen/: clojure.rs  clojure_lam.rs  cpp.rs  emacs.rs  emacs_lam.rs  go.rs  haskell.rs  java.rs  kotlin.rs  lazyk.rs  mod.rs  newlisp.rs  pascal.rs  perl.rs  php.rs  php_ski.rs  python.rs  racket.rs  ruby.rs  rust.rs  scala.rs  scala_infix.rs  sml.rs  swift.rs
(+210 files in other folders)
